--- a/middleProject/pom.xml
+++ b/middleProject/pom.xml
@@ -64,6 +64,15 @@
 			<artifactId>taglibs-standard-impl</artifactId>
 			<version>1.2.5</version>
 		</dependency>
+		
+		
+		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.16.0</version>
+		</dependency>
+
 
 
 	</dependencies>
