11월 19일 오전 10시 29분

--- a/middleProject/pom.xml
+++ b/middleProject/pom.xml
@@ -73,7 +73,12 @@
 		    <version>1.16.0</version>
 		</dependency>
 
-
+		<!-- 메일 -->
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 
 	</dependencies>
   
